# 42pythonPiscine

0/: Readme.md
0/ex00/: Hello.py
0/ex01/: format_ft_time.py
0/ex02/: find_ft_type.py  tester.py
0/ex03/: NULL_not_found.py
0/ex04/: whatis.py
0/ex05/: building.py
0/ex06/: filterstring.py  ft_filter.py  tester.py  tester_filterstring.py  tester_ft_filter.py
0/ex07/: sos.py
0/ex08/: Loading.py  tester.py
0/ex09/: LICENSE  README.md  pyproject.toml
0/ex09/ft_package/: __init__.py  tools.py
0/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
1/: Readme.md
1/ex00/: give_bmi.py
1/ex01/: array2D.py
1/ex02/: load_image.py  tester.py
1/ex03/: tester.py  zoom.py
1/ex04/: load_image.py  rotate.py  tester.py
1/ex05/: load_image.py  pimp_image.py  tester.py
2/ex00/: S1E9.py  tester.py
2/ex01/: S1E7.py
2/ex02/: DiamondTrap.py
2/ex03/: ft_calculator.py
2/ex04/: ft_calculator.py  tester.py
3/: Readme.md
3/ex00/: load_csv.py  tester.py
3/ex01/: aff_life.py  load_csv.py
3/ex02/: aff_pop.py
3/ex03/: projection_life.py
4/ex00/: statistics.py
4/ex01/: in_out.py
4/ex02/: callLimit.py
4/ex03/: new_student.py  tester.py
