[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    { name="eagle", email="eagle@42.fr" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
urls = { "Homepage" = "https://intra.42.fr" }
